# proteinholes

./: README.md  get_pdb_coords.py  get_pdb_coords.py~  git_add.sh
classifier/: adaboost.py  lda.py  lda_results.txt  persist_ell.csv  randomforest.py  randomforest_results.txt  randomforest_results_betti1.txt  results.txt
classifier/persistences/: persist_ell.csv  persist_rig.csv  persist_vox.csv  persist_wtr.csv
data/: 0README.txt  average_ell.txt  average_rig.txt  average_vox.txt  average_wtr.txt  compute_persistences.sh  download_pdbs.sh  get_average_persistences.sh  get_persistency_matrices.sh  muts.txt  muts_small.txt  pdbs.txt  pdbs_small.txt  persist_vox.csv  phatclique.out  phatclique.sh  phatclique_manual.out  phatclique_redo.out  phatclique_rig.out  prepare.out  prepare_pdbs.sh  rigid_dimacs.m  
h2phat/: README  bcliques.cpp  ctree.m
h2phat/SheehyEdgeList/: SlowSparseEdgeList.cpp  SlowSparseEdgeList.mexa64  (+2 more)
h2phatclique/: .gitignore  CMakeLists.txt  plotpdiags.m
h2phatclique/SheehyEdgeList/BillsCode/: .fuse_hidden0000785b00000007  Arch.H  CoverNode.C  DLPtrList.C  DLPtrList.H  EnlargeData.C  EnlargeData.H  Errors.H  MemoryDebugger.C  NIDLList.C  SparseVector.H  ThreadsWithCounter.C  covertree.mexa64  covertree.mexmaci64  jtIDLList.C  jtIDLListNode.H  main.C  testCoverTreeSparse.m
h2phatclique/cliquer-1.21/: Makefile  cliquer.c
h2phatclique/include/: bmatrix.h
h2phatclique/tests/: randcircle.dimacs  randsphere.dimacs.results
scripts/: 0README.Txt  get_average_persistences.py  get_persistency_matrices.py  phatclique  phatclique2  save_coords.py  save_dimacs.m  save_molec.py
(+398 files in other folders)
